--- a/tests/scenario-4-capabilities/space.yaml
+++ b/tests/scenario-4-capabilities/space.yaml
@@ -1,30 +1,41 @@
 space:
-  id: test-space
-  name: "Scenario 4 - Dynamic Capability Granting"
-  description: "Test dynamic capability granting and revoking"
+  id: scenario-4
+  name: "Scenario 4 - STDIO Capability Signals"
+  description: "Simulates capability grants and revokes with a limited agent"
 
 participants:
   calculator-agent:
-    tokens: ["calculator-token"]
-    capabilities:
-      - kind: mcp/response
-      - kind: system/*
     auto_start: true
     command: "node"
-    args: ["../agents/calculator-participant.js", "--gateway", "ws://localhost:${PORT}", "--space", "test-space", "--token", "calculator-token"]
-    
+    args: ["../agents/calculator-participant.js"]
+    env:
+      MEW_PARTICIPANT_ID: "calculator-agent"
+      CALCULATOR_LOG: "./logs/calculator.log"
+    capabilities:
+      - kind: mcp/request
+      - kind: mcp/response
+      - kind: system/*
+
   coordinator:
-    tokens: ["admin-token"]
+    auto_start: true
+    command: "node"
+    args: ["../agents/coordinator-agent.js"]
+    env:
+      MEW_PARTICIPANT_ID: "coordinator"
     capabilities:
       - kind: capability/grant
       - kind: capability/revoke
       - kind: system/*
-    output_log: "./logs/coordinator-output.log"
-    auto_connect: true
-    
+
   limited-agent:
-    tokens: ["limited-token"]
+    auto_start: true
+    command: "node"
+    args: ["../agents/limited-driver.js"]
+    env:
+      MEW_PARTICIPANT_ID: "limited-agent"
+      DRIVER_LOG: "./logs/limited-driver.log"
     capabilities:
+      - kind: mcp/request
+      - kind: mcp/response
+      - kind: capability/*
       - kind: system/*
-    output_log: "./logs/limited-agent-output.log"
-    auto_connect: true
