--- a/tests/scenario-7-mcp-bridge/space.yaml
+++ b/tests/scenario-7-mcp-bridge/space.yaml
@@ -1,38 +1,28 @@
 space:
   id: scenario-7
-  name: "MCP Bridge Test"
-  description: "Test MCP server integration via bridge"
+  name: "Scenario 7 - STDIO MCP Bridge"
+  description: "Simulates an MCP bridge exchanging tool calls"
 
 participants:
-  # MCP filesystem server via bridge
-  filesystem:
-    type: mcp-bridge
-    mcp_server:
-      command: "npx"
-      args: 
-        - "-y"
-        - "@modelcontextprotocol/server-filesystem"
-        - "/tmp/mcp-test-files"
+  bridge-agent:
     auto_start: true
-    tokens: ["fs-token"]
+    command: "node"
+    args: ["../agents/bridge-agent.js"]
+    env:
+      MEW_PARTICIPANT_ID: "bridge-agent"
     capabilities:
-      - kind: "system/register"
-      - kind: "system/heartbeat"
-      - kind: "mcp/response"
-      - kind: "chat"
-    bridge_config:
-      init_timeout: 30000
-      reconnect: true
-      max_reconnects: 3
-  
-  # Test client using FIFO (like scenario-3's proposer)
-  test-client:
-    tokens: ["test-token"]
+      - kind: mcp/request
+      - kind: mcp/response
+      - kind: system/*
+
+  bridge-driver:
+    auto_start: true
+    command: "node"
+    args: ["../agents/bridge-driver.js"]
+    env:
+      MEW_PARTICIPANT_ID: "bridge-driver"
+      DRIVER_LOG: "./logs/bridge-driver.log"
     capabilities:
-      - kind: "mcp/request"
-        payload:
-          method: "tools/*"
-      - kind: "mcp/response"
-      - kind: "system/*"
-    output_log: "./logs/test-client-output.log"
-    auto_connect: true
+      - kind: mcp/request
+      - kind: mcp/response
+      - kind: system/*
