feat: add verbose mode to test runner for CI debugging
- Add --verbose/-v flag to run-all-tests.sh
- Show test output directly in verbose mode (with tee to log)
- Display last 20 lines of failed test logs in verbose mode
- Update CI workflow to use verbose flag for better debugging
- Helps diagnose why tests 3-6 fail in CI but pass locally

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       run: npm run build:sdk
 
     - name: Run tests (without LLM scenarios)
-      run: npm test
+      run: ./tests/run-all-tests.sh --no-llm --verbose
       env:
         # Scenarios 8, 9, 10 require OPENAI_API_KEY and are skipped with --no-llm flag
         CI: true
