--- a/sdk/typescript-sdk/client/package.json
+++ b/sdk/typescript-sdk/client/package.json
@@ -13,8 +13,8 @@
     }
   },
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "node ../../../scripts/build-ts-package.mjs",
+    "dev": "tsc --watch --project tsconfig.json",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
@@ -23,7 +23,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\"",
     "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist build-temp"
   },
   "keywords": [
     "mew",
