--- a/sdk/typescript-sdk/gateway/package.json
+++ b/sdk/typescript-sdk/gateway/package.json
@@ -13,15 +13,15 @@
     }
   },
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "node ../../../scripts/build-ts-package.mjs",
+    "dev": "tsc --watch --project tsconfig.json",
     "start": "node dist/index.js",
     "start:dev": "tsx src/server.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist build-temp"
   },
   "keywords": [
     "mew",
