--- a/tests/scenario-7-mcp-bridge/space.yaml
+++ b/tests/scenario-7-mcp-bridge/space.yaml
@@ -8,10 +8,9 @@ participants:
   filesystem:
     type: mcp-bridge
     mcp_server:
-      command: "npx"
-      args: 
-        - "-y"
-        - "@modelcontextprotocol/server-filesystem"
+      command: "node"
+      args:
+        - "../agents/mcp-filesystem-server.js"
         - "/tmp/mcp-test-files"
     auto_start: true
     tokens: ["fs-token"]
