--- a/cli/templates/coder-agent/space.yaml
+++ b/cli/templates/coder-agent/space.yaml
@@ -23,9 +23,14 @@ participants:
   # Coder agent with limited capabilities - creates proposals for file modifications
   mew:
     type: local
-    command: "npx"
-    args: ["--yes", "@mew-protocol/agent", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--id", "mew"]
+    command: "node"
+    args: ["../../sdk/typescript-sdk/agent/dist/index.js"]
     auto_start: true
+    env:
+      MEW_TRANSPORT: "stdio"
+      MEW_SPACE: "{{SPACE_NAME}}"
+      MEW_TOKEN: "${TOKEN}"
+      MEW_PARTICIPANT_ID: "mew"
     # No tokens field - generated at runtime in .mew/tokens/
     capabilities:
       - kind: "chat"
@@ -94,6 +99,33 @@ participants:
           method: "tools/call"
           params:
             name: "get_file_info"
+
+  mcp-fs-bridge:
+    type: local
+    command: "node"
+    args:
+      [
+        "../../bridge/dist/mcp-bridge.js",
+        "--transport",
+        "stdio",
+        "--space",
+        "{{SPACE_NAME}}",
+        "--token",
+        "${TOKEN}",
+        "--participant-id",
+        "mcp-fs-bridge",
+        "--mcp-command",
+        "node",
+        "--mcp-args",
+        ".mew/node_modules/@modelcontextprotocol/server-filesystem/dist/index.js,./",
+        "--mcp-cwd",
+        "./"
+      ]
+    auto_start: true
+    capabilities:
+      - kind: "mcp/request"
+      - kind: "mcp/response"
+      - kind: "mcp/notification"
 
 defaults:
   capabilities:
