--- a/sdk/typescript-sdk/agent/package.json
+++ b/sdk/typescript-sdk/agent/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "postbuild": "node -e \"const fs=require('fs');const path=require('path');const target=path.join(__dirname,'dist','index.js');if(fs.existsSync(target)){fs.chmodSync(target,0o755);}\"",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
