refactor: Remove custom build script and simplify client/gateway builds
- Delete scripts/build-ts-package.mjs as it's no longer needed
- Update client and gateway packages to use plain tsc
- Remove unused tsconfig.build.*.json files from client/gateway
- Update MONOREPO-ARCHITECTURE.md to reflect simplified build process

All packages now use standard TypeScript compilation with project references,
eliminating the need for custom build scripts that handled dual-format output.

--- a/sdk/typescript-sdk/client/package.json
+++ b/sdk/typescript-sdk/client/package.json
@@ -13,8 +13,8 @@
     }
   },
   "scripts": {
-    "build": "node ../../../scripts/build-ts-package.mjs",
-    "dev": "tsc --watch --project tsconfig.json",
+    "build": "tsc",
+    "dev": "tsc --watch",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
