--- a/tests/scenario-9-typescript-proposals/template/space.yaml
+++ b/tests/scenario-9-typescript-proposals/template/space.yaml
@@ -8,10 +8,9 @@ participants:
     type: local
     tokens: ["ts-agent-token"]
     auto_start: true
-    command: "npx"
+    command: "node"
     args:
-      - "--yes"
-      - "@mew-protocol/agent"
+      - "../../../sdk/typescript-sdk/agent/dist/index.js"
       - "--gateway"
       - "ws://localhost:${PORT}"
       - "--space"
@@ -32,6 +31,8 @@ participants:
         payload:
           method: "tools/list"
       - kind: "reasoning/*"
+    env:
+      MEW_AGENT_CONFIG: '{"mockLLM":true,"autoRespond":true}'
 
   fulfiller-agent:
     type: local
