fix(templates): give humans full capability access

--- a/cli/templates/cat-maze/space.yaml
+++ b/cli/templates/cat-maze/space.yaml
@@ -8,11 +8,7 @@ space:
 participants:
   human:
     capabilities:
-      - kind: "chat"
-      - kind: "mcp/request"
-        payload:
-          method: "tools/*"
-      - kind: "mcp/response"
+      - kind: "*"  # Full access so humans can use every capability, including reasoning cancel
 
   mew:
     type: local
