--- a/packages/mew/package.json
+++ b/packages/mew/package.json
@@ -49,6 +49,8 @@
   "author": "MEW Protocol Working Group",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.4",
+    "@modelcontextprotocol/server-filesystem": "^0.6.2",
     "@types/uuid": "^10.0.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
