--- a/packages/mew/templates/cat-maze/space.yaml
+++ b/packages/mew/templates/cat-maze/space.yaml
@@ -12,8 +12,8 @@ participants:
 
   mew:
     type: local
-    command: "npx"
-    args: ["--yes", "@mew-protocol/agent", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--id", "mew"]
+    command: "mew"
+    args: ["agent", "run", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--id", "mew"]
     auto_start: true
     capabilities:
       - kind: "chat"
@@ -36,8 +36,8 @@ participants:
 
   cat-maze:
     type: local
-    command: "npx"
-    args: ["--yes", "@mew-protocol/bridge", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--participant-id", "cat-maze", "--mcp-command", "node", "--mcp-args", "./.mew/agents/cat-maze-server.js", "--mcp-cwd", "./"]
+    command: "mew"
+    args: ["bridge", "start", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--participant-id", "cat-maze", "--mcp-command", "mew", "--mcp-args", "mcp,cat-maze"]
     auto_start: true
     capabilities:
       - kind: "mcp/request"
