--- a/cli/package.json
+++ b/cli/package.json
@@ -5,8 +5,13 @@
   "bin": {
     "mew": "bin/mew.js"
   },
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf dist",
     "test": "node tests/run-tests.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -39,6 +44,7 @@
     "ws": "^8.18.0"
   },
   "files": [
+    "dist",
     "src",
     "bin",
     "templates",
@@ -58,10 +64,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.16.11",
+    "@types/react": "^18.3.12",
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.6.3"
   }
 }
