refactor(Phase 5.2): Convert CLI from JavaScript to TypeScript
Renamed 22 CLI files from .js to .ts to enable unified TypeScript build:

Commands (8): agent, bridge, client, gateway, init, mcp, space, token
UI (7): EnhancedInput, SimpleInput, useKeypress, keyMatchers, slashCommands, text-buffer, textUtils
Utils (5): advanced-interactive-ui, banner, interactive-ui, message-input, participant-resolver
Config (1): keyBindings
Entry (1): index

Changes:
- Renamed all src/cli/**/*.js → *.ts
- Updated tsconfig.json: Removed CLI exclusion, added "types": ["node"]
- Updated tsup.config.js: Changed entry to index.ts
- Added // @ts-nocheck to all CLI files (temporary workaround for type errors)
- Removed shebang from init.ts (only needed in bundled bin)

TypeScript compilation succeeds. Next: Fix module resolution with .js extensions.

--- a/packages/mew/tsconfig.json
+++ b/packages/mew/tsconfig.json
@@ -6,7 +6,8 @@
     "composite": false,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": ["node"]
   },
   "include": [
     "src/**/*.ts"
@@ -15,8 +16,6 @@
     "node_modules",
     "dist",
     "**/*.test.ts",
-    "**/*.spec.ts",
-    "src/cli/**/*",
-    "src/bin/**/*"
+    "**/*.spec.ts"
   ]
 }
