--- a/templates/note-taker/space.yaml
+++ b/templates/note-taker/space.yaml
@@ -2,6 +2,7 @@ space:
   id: "{{SPACE_NAME}}"
   name: "{{SPACE_NAME}}"
   description: "Note-taking and organization workspace"
+  ui_theme: "{{UI_THEME}}"
 
 participants:
   human:
