--- a/templates/coder-agent/space.yaml
+++ b/templates/coder-agent/space.yaml
@@ -106,7 +106,7 @@ participants:
   mcp-fs-bridge:
     type: local
     command: "mew"
-    args: ["bridge", "start", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--participant-id", "mcp-fs-bridge", "--mcp-command", "mew", "--mcp-args", "mcp,filesystem,./"]
+    args: ["bridge", "start", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "${TOKEN}", "--participant-id", "mcp-fs-bridge", "--mcp-command", "mew", "--mcp-args", "mcp,filesystem,{{WORKSPACE_PATH}}"]
     auto_start: true
     # No tokens field - generated at runtime in .mew/tokens/
     capabilities:
